<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/apple"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/apple"
        android:onClick="addToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orange"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/orange"
        android:onClick="addToList"
        app:layout_constraintEnd_toStartOf="@+id/banana"
        app:layout_constraintStart_toEndOf="@+id/apple"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/banana"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/banana"
        android:onClick="addToList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chees"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chees"
        android:onClick="addToList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banana" />

    <Button
        android:id="@+id/candy"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/candy"
        android:onClick="addToList"
        app:layout_constraintEnd_toStartOf="@+id/chees"
        app:layout_constraintStart_toEndOf="@+id/bread"
        app:layout_constraintTop_toBottomOf="@+id/orange" />

    <Button
        android:id="@+id/bread"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/bread"
        android:onClick="addToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple" />

    <Button
        android:id="@+id/egg"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/eggs"
        android:onClick="addToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bread" />

    <Button
        android:id="@+id/meat"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/meat"
        android:onClick="addToList"
        app:layout_constraintEnd_toStartOf="@+id/milk"
        app:layout_constraintStart_toEndOf="@+id/egg"
        app:layout_constraintTop_toBottomOf="@+id/candy" />

    <Button
        android:id="@+id/milk"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/milk"
        android:onClick="addToList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chees" />

    <Button
        android:id="@+id/water"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/water"
        android:onClick="addToList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meat"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/store_edittext"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="116dp"
        android:hint="@string/enter_a_store_to_find_on_a_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/find_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/find_store"
        android:onClick="findStore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_edittext"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>